2011-09-08  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/javax/imageio/ImageIO/Bitmap-1Bit.png:
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-4Bit.png:
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-8Bit.png:
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-24Bit.png:
	* gnu/testlet/javax/imageio/ImageIO/Bitmap-32Bit.png:
	New bitmaps used in test ImageIOTest.
	* gnu/testlet/javax/imageio/ImageIO/ImageIOTest.java:
	Add more tests.

2011-09-07  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/awt/ColorClass/constants.java:
	Add more tests.
	* gnu/testlet/java/awt/ColorClass/decode.java:
	Add more tests.
	* gnu/testlet/java/awt/ColorClass/getBlue.java:
	Add more tests.
	* gnu/testlet/java/awt/ColorClass/getGreen.java:
	Add more tests.
	* gnu/testlet/java/awt/ColorClass/getRed.java:
	Add more tests.
	* gnu/testlet/java/awt/ColorClass/hashCode.java:
	Add more tests.

2011-09-06  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Long/new_Long.java (test): 
	Add more tests.

2011-09-05  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Integer/new_Integer.java (test): 
	Add more tests.

2011-08-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/util/Currency/
	(Czech.java): New class of tests for the Czech currency (CZK).
	(Slovak.java): New class of tests for the Slovak currency (SKK).

2011-08-19  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Integer/parseInt.java:
	Fixed the test to work correctly on OpenJDK6 JRE.

2011-08-17  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/io/File/security.java:
	Fixed cleaning phase of this test, it now deletes all its
	work files and directories.

2011-04-25  Pekka Enberg  <penberg@kernel.org>

	* gnu/testlet/java/util/regex/Matcher/quoteReplacement.java:
	Add tests for Matcher.quoteReplacement().

2011-03-14  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/testlet/java/net/Socket/security.java:
	Add test for connect(SocketAddress, int).